--- a/sampleadcrux.html
+++ b/sampleadcrux.html
@@ -10,10 +10,10 @@
 </style>
 <div id="mainCont">
   <div id="videoCont">
-<div id="wistia_5abbsp8uom" class="wistia_embed" style="width:300px;height:169px;">&nbsp;</div>
+<div id="wistia_w2fteq890g" class="wistia_embed" style="width:300px;height:169px;">&nbsp;</div>
 <script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/E-v1.js"></script>
 <script>
-wistiaEmbed = Wistia.embed("5abbsp8uom", {
+wistiaEmbed = Wistia.embed("w2fteq890g", {
   plugin: {
     wistiafollows: {
       people: [
@@ -31,11 +31,6 @@ wistiaEmbed = Wistia.embed("5abbsp8uom", {
   },
   playerColor: "000000"
 
-});
-
-//Fire when video ends
-wistiaEmbed.bind("end", function () {
-  document.getElementById("endfm").style.display = "inherit";
 });
 
 //Fire when video start to play
