--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=GTM-MV77JRP"></script>
+<script async src="https://gtmserver.udallas.edu/gtag/js?id=GTM-MV77JRP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
