--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://gtmserver.udallas.edu/gtag/js?id=GTM-MV77JRP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'GTM-MV77JRP', {
-    transport_url: 'https://gtmserver.udallas.edu',
-  });
-  
-   function sendEvent() {
-    gtag('event', 'click');
-  }
-</script>
+<!-- scripts and extra code for the head tag --> <!-- Google Tag Manager -->
+<script type="text/javascript">// <![CDATA[
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WXPHVHJ');
+// ]]></script>
 </body>
 </html>
