--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<!-- Place in HEAD -->
+<script async src='https://securepubads.g.doubleclick.net/tag/js/gpt.js'></script>
+<!-- 
+Please comment out the googlesyndication.com script below until advised otherwise by VMR
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5705117640248675"
+     crossorigin="anonymous"></script>
+-->
+<script src='https://cdn1.vmrcommunications.com/catholicherald/dist/js/vmr-ch-gpt.min.js'></script>
 
-<!-- scripts and extra code for the head tag --> <!-- Google Tag Manager -->
-<script type="text/javascript">// <![CDATA[
-(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://gtmserver.udallas.edu/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MV77JRP');
-// ]]></script>
-</body>
-</html>
+<!--
+These are BODY tags for each ad slot
+Note when testing that some ads may not display if the ad tag is not tested or deployed on catholicherald.co.uk
+or subdomain of catholicherald.co.uk
+-->
+
+<!-- Desktop tags below -->
+<!-- CH001-Top  -->
+<div id='CH001-Top' class='test1'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('CH001-Top'); });
+  </script>
+</div>
+<!-- End: CH001-Top -->
+
+<!-- CH001-Bottom -->
+<div id='CH001-Bottom'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('CH001-Bottom'); });
+  </script>
+</div>
+<!-- End: CH001-Bottom -->
+
+<!-- CH002 -->
+<div id='CH002'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('CH002'); });
+  </script>
+</div>
+<!-- End: CH002 -->
+
+<!-- CH003 -->
+<div id='CH003'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('CH003'); });
+  </script>
+</div>
+<!-- End: CH003 -->
+<!-- Desktop tags above -->
+
+<!-- Mobile Web Tags below -->
+<!-- CH004-Top -->
+<div id='CH004-Top'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('CH004-Top'); });
+  </script>
+</div>
+<!-- End: CH004-Top -->
+
+<!-- CH004-Bottom -->
+<div id='CH004-Top'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('CH004-Bottom'); });
+  </script>
+</div>
+<!-- End: CH004-Top -->
+
+<!-- CH005 -->
+<div id='CH005'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('CH005'); });
+  </script>
+</div>
+<!-- End: CH005 -->
+<!-- End: Mobile Web Tags -->
+<!-- End BODY Tags -->
