--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Note when testing that some ads may not display if the ad tag is not tested or d
 or subdomain of catholicherald.co.uk
 -->
 
+CH001-Top
 <!-- Desktop tags below -->
 <!-- CH001-Top  -->
 <div id='CH001-Top' class='test1'>
@@ -21,7 +22,7 @@ or subdomain of catholicherald.co.uk
   </script>
 </div>
 <!-- End: CH001-Top -->
-
+CH001-Bottom
 <!-- CH001-Bottom -->
 <div id='CH001-Bottom'>
   <script>
@@ -30,6 +31,7 @@ or subdomain of catholicherald.co.uk
 </div>
 <!-- End: CH001-Bottom -->
 
+CH002
 <!-- CH002 -->
 <div id='CH002'>
   <script>
@@ -37,7 +39,7 @@ or subdomain of catholicherald.co.uk
   </script>
 </div>
 <!-- End: CH002 -->
-
+CH003
 <!-- CH003 -->
 <div id='CH003'>
   <script>
@@ -46,7 +48,7 @@ or subdomain of catholicherald.co.uk
 </div>
 <!-- End: CH003 -->
 <!-- Desktop tags above -->
-
+CH004-Top
 <!-- Mobile Web Tags below -->
 <!-- CH004-Top -->
 <div id='CH004-Top'>
@@ -55,15 +57,15 @@ or subdomain of catholicherald.co.uk
   </script>
 </div>
 <!-- End: CH004-Top -->
-
+CH004-Bottom
 <!-- CH004-Bottom -->
-<div id='CH004-Top'>
+<div id='CH004-Bottom'>
   <script>
     googletag.cmd.push(function() { googletag.display('CH004-Bottom'); });
   </script>
 </div>
 <!-- End: CH004-Top -->
-
+CH005
 <!-- CH005 -->
 <div id='CH005'>
   <script>
