--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@ Note when testing that some ads may not display if the ad tag is not tested or d
 or subdomain of catholicherald.co.uk
 -->
 
-CH001-Top
+CH001-Top-Using CatholicHerald_4 ad unit
+<!-- Desktop tags below -->
+<!-- CH001-Top  -->
+<div id='div-gpt-ad-4206571-4' class='test1'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-4206571-4'); });
+  </script>
+</div>
+<!-- End: CH001-Top -->
+
+CH001-Top using CatholicHerald_5 ad unit
 <!-- Desktop tags below -->
 <!-- CH001-Top  -->
 <div id='CH001-Top' class='test1'>
