--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@ Please comment out the googlesyndication.com script below until advised otherwis
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5705117640248675"
      crossorigin="anonymous"></script>
 -->
+<!-- New script below - not using yet for this test page
 <script src='https://cdn1.vmrcommunications.com/catholicherald/dist/js/vmr-ch-gpt.min.js'></script>
+-->
+<!-- using the script for now for this test page -->
+<script src='https://cdn2.vmrcommunications.com/catholicherald/dist/js/vmr-ch-gpt.min.js'></script>
 
 <!--
 These are BODY tags for each ad slot
