--- a/ch-testpage1.html
+++ b/ch-testpage1.html
@@ -11,6 +11,12 @@ Please comment out the googlesyndication.com script below until advised otherwis
 <!-- using the script for now for this test page -->
 <script src='https://cdn2.vmrcommunications.com/catholicherald/dist/js/vmr-ch-gpt.min.js'></script>
 
+<style>
+#CH004-Bottom {
+  width: 250px;
+}
+</style>
+
 <!--
 These are BODY tags for each ad slot
 Note when testing that some ads may not display if the ad tag is not tested or deployed on catholicherald.co.uk
