--- a/ch-testpage1.html
+++ b/ch-testpage1.html
@@ -12,7 +12,7 @@ Please comment out the googlesyndication.com script below until advised otherwis
 <script src='https://cdn2.vmrcommunications.com/catholicherald/dist/js/vmr-ch-gpt.min.js'></script>
 
 <style>
-#CH004-Bottom {
+CH004-Bottom {
   width: 250px;
 }
 </style>
