--- a/chtest2.html
+++ b/chtest2.html
@@ -5,12 +5,7 @@ Please comment out the googlesyndication.com script below until advised otherwis
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5705117640248675"
      crossorigin="anonymous"></script>
 -->
-<!-- New script below - not using yet for this test page
-<script src='https://cdn1.vmrcommunications.com/catholicherald/dist/js/vmr-ch-gpt.min.js'></script>
--->
-<!-- using the script for now for this test page -->
 <script src='https://cdn2.vmrcommunications.com/catholicherald/dist/js/vmr-ch-gpt.min.js'></script>
-
 
 <!--
 These are BODY tags for each ad slot
@@ -18,27 +13,16 @@ Note when testing that some ads may not display if the ad tag is not tested or d
 or subdomain of catholicherald.co.uk
 -->
 
-CH001-Top-Using CatholicHerald_4 ad unit
 <!-- Desktop tags below -->
-<!-- CH001-Top  -->
-<div id='div-gpt-ad-4206571-4' class='test1'>
-  <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-4206571-4'); });
-  </script>
-</div>
-<!-- End: CH001-Top -->
-
-CH001-Top using CatholicHerald_5 ad unit
-<!-- Desktop tags below -->
-<!-- CH001-Top  -->
-<div id='CH001-Top' class='test1'>
+<!-- CH001-Top  728x90  -->
+<div id='CH001-Top'>
   <script>
     googletag.cmd.push(function() { googletag.display('CH001-Top'); });
   </script>
 </div>
 <!-- End: CH001-Top -->
-CH001-Bottom
-<!-- CH001-Bottom -->
+
+<!-- CH001-Bottom 728x90 -->
 <div id='CH001-Bottom'>
   <script>
     googletag.cmd.push(function() { googletag.display('CH001-Bottom'); });
@@ -46,16 +30,15 @@ CH001-Bottom
 </div>
 <!-- End: CH001-Bottom -->
 
-CH002
-<!-- CH002 -->
+<!-- CH002 300x250 -->
 <div id='CH002'>
   <script>
     googletag.cmd.push(function() { googletag.display('CH002'); });
   </script>
 </div>
 <!-- End: CH002 -->
-CH003
-<!-- CH003 -->
+
+<!-- CH003 300x250 -->
 <div id='CH003'>
   <script>
     googletag.cmd.push(function() { googletag.display('CH003'); });
@@ -63,25 +46,25 @@ CH003
 </div>
 <!-- End: CH003 -->
 <!-- Desktop tags above -->
-CH004-Top
+
 <!-- Mobile Web Tags below -->
-<!-- CH004-Top -->
+<!-- CH004-Top 300x250 -->
 <div id='CH004-Top'>
   <script>
     googletag.cmd.push(function() { googletag.display('CH004-Top'); });
   </script>
 </div>
 <!-- End: CH004-Top -->
-CH004-Bottom
-<!-- CH004-Bottom -->
+
+<!-- CH004-Bottom 300x250 -->
 <div id='CH004-Bottom'>
   <script>
     googletag.cmd.push(function() { googletag.display('CH004-Bottom'); });
   </script>
 </div>
 <!-- End: CH004-Top -->
-CH005
-<!-- CH005 -->
+
+<!-- CH005 300x250 -->
 <div id='CH005'>
   <script>
     googletag.cmd.push(function() { googletag.display('CH005'); });
