--- a/chtest2.html
+++ b/chtest2.html
@@ -5,13 +5,20 @@ Please comment out the googlesyndication.com script below until advised otherwis
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5705117640248675"
      crossorigin="anonymous"></script>
 -->
+<!--
 <script src='https://cdn2.vmrcommunications.com/catholicherald/dist/js/vmr-ch-gpt.min.js'></script>
-
+-->
 <!--
 These are BODY tags for each ad slot
 Note when testing that some ads may not display if the ad tag is not tested or deployed on catholicherald.co.uk
 or subdomain of catholicherald.co.uk
 -->
+
+<script>
+window.googletag=window.googletag||{cmd:[]},googletag.cmd.push(function(){googletag.defineSlot("/4580722/CatholicHerald_1",[[300,250],[160,600],[970,250],[336,280]],"div-gpt-ad-4206571-1").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_2",["fluid",[160,600]],"div-gpt-ad-4206571-2").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_3",["fluid",[300,250],[336,280],[160,600],[970,250]],"div-gpt-ad-4206571-3").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_4",[[728,90]],"div-gpt-ad-4206571-4").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_5",[[728,90]],"CH001-Top").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_6",[[728,90]],"CH001-Bottom").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_7",["fluid",[300,250]],"CH002").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_8",["fluid",[300,250]],"CH003").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_9",["fluid",[300,250],[302,250]],"CH004-Top").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_10",["fluid",[300,250]],"CH004-Bottom").addService(googletag.pubads()),googletag.defineSlot("/4580722/CatholicHerald_11",["fluid",[300,250]],"CH005").addService(googletag.pubads()),googletag.pubads().enableSingleRequest(),googletag.enableServices()});</script>
+
+
+
 
 
 <!-- CH002 300x250 -->
