--- a/banners/payg1.html
+++ b/banners/payg1.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Pray As You Go</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://dreamerdad.github.io/banners/assets/styles.css">
 </head>
 <body>
   <main>
@@ -15,10 +15,10 @@
       <div class="container">
         <div class="banner">
           <video autoplay muted loop playsinline>
-            <source src="videos/forest.mp4" type="video/mp4" />
+            <source src="https://dreamerdad.github.io/banners/assets/forest.mp4" type="video/mp4" />
           </video>
           <div class="banner__content banner__content_bot">
-            <img height="39" src="img/logo.svg" alt="logotype" />
+            <img height="39" src="https://dreamerdad.github.io/banners/assets/logo.svg" alt="logotype" />
             <h1 class="smaller">Daily Prayer App</h1>
             <div class="banner__btn">
               <a href="#" class="banner__link" title="Download now">Download now</a>
