--- a/samplead.html
+++ b/samplead.html
@@ -8,7 +8,7 @@
 </style>
 <div id="can7678">
 <div id="can7678yt">
-  <iframe id="mainiframe" src="http://www.youtube.com/embed/XVIsq1VhGVE?modestbranding=1&rel=0&controls=2" frameborder="0" allowfullscreen></iframe>
+  <iframe id="mainiframe" src="https://www.youtube.com/embed/XVIsq1VhGVE?modestbranding=1&rel=0&controls=2" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="can7ee678">
 <form target="_blank" id="kheform" action="http://knightsoftheholyeucharist.us7.list-manage.com/subscribe/post"  name="sample_sheet" method="post">
@@ -19,8 +19,8 @@
   <input type="image" onclick="close();" value="Submit" src="http://i.imgur.com/nIk9ena.png" width="100px"/>
 </div>
 <div id="khelogoandcta">
-<a href="http://knightsoftheholyeucharist.com" target="_blank">
-<img id="kheimage" src="http://i.imgur.com/WpImwe7.gif" alt="KofHELogoplusCTA" />
+<a href="https://knightsoftheholyeucharist.com" target="_blank">
+<img id="kheimage" src="https://i.imgur.com/WpImwe7.gif" alt="KofHELogoplusCTA" />
 
 </a>
 </div>
