--- a/samplead.html
+++ b/samplead.html
@@ -8,10 +8,10 @@
 </style>
 <div id="can7678">
 <div id="can7678yt">
-  <iframe id="mainiframe" src="https://www.youtube.com/embed/XVIsq1VhGVE?modestbranding=1&rel=0&controls=2" frameborder="0" allowfullscreen></iframe>
+  <iframe id="mainiframe" src="https://www.youtube.com/watch?v=asXGU22Uu6Q?modestbranding=1&rel=0&controls=2" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="can7ee678">
-<form target="_blank" id="kheform" action="http://knightsoftheholyeucharist.us7.list-manage.com/subscribe/post"  name="sample_sheet" method="post">
+<form target="_blank" id="kheform" action="https://knightsoftheholyeucharist.us7.list-manage.com/subscribe/post"  name="sample_sheet" method="post">
   <input type="hidden" name="u" value="66f02a2e27e95a1ee237db047">
   <input type="hidden" name="id" value="579f4bb4bc">
   <input type="text" name="MERGE3" id="MERGE3" size="25" value="" placeholder="Your Name" style="width:90px;" required />
